2008-07-25  Chong Yidong  <cyd@stupidchicken.com>

	* textmodes/tex-mode.el (tex-compilation-parse-errors): Check for
	invalid filename strings when parsing tex errors (bug#376).

2008-07-24  Sven Joachim  <svenjoac@gmx.de>

	* dired-aux.el (dired-copy-file-recursive): Avoid calling
	set-file-modes when creating target directories.

2008-07-24  Chong Yidong  <cyd@stupidchicken.com>

	* textmodes/enriched.el (enriched-mode-map): Bind C-a and C-j via
	key remapping, not directly.

2008-07-23  Nikolaj Schumacher  <n_schumacher@web.de>  (tiny change)

	* progmodes/flymake.el (flymake-errline, flymake-warnline): Use
	more suitable colors on dark displays.

2008-07-23  Chong Yidong  <cyd@stupidchicken.com>

	* shell.el (shell-dynamic-complete-functions): Use
	comint-dynamic-complete-filename as well (bug#361).

2008-06-21  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-engine.el (c-guess-basic-syntax CASE 5D.5): Fix an
	infinite loop on invalid syntax.

2008-06-11  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-make-temp-file): Backport from Tramp 2.1.

2008-06-08  Michael Albinus  <michael.albinus@gmx.de>

	* uniquify.el (uniquify-get-proposed-name): Handle remote files.

2008-05-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* tar-mode.el (tar-header-block-summarize): Ensure one space around
	user&group.

2008-05-25  Ed Reingold  <reingold@emr.cs.iit.edu>

	* calendar/cal-hebrew.el (diary-hebrew-yahrzeit):
	Use diary-ordinal-suffix.

2008-05-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* tar-mode.el (tar-summarize-buffer): Handle GNU Tar @LongLink format.

2008-05-24  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-mode.el (c-postprocess-file-styles): Throw an error
	if c-file-style is set to a non-string

	(c-neutralize-CPP-line): Surround by `save-excursion'.
	(c-neutralize-syntax-in-CPP): Optimize for speed.

2008-05-18  David Hull <david@snap.com>  (tiny change)

	* vc-hg.el (vc-hg-annotate-re): Recognize the output of --follow.
